--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -47,7 +47,7 @@ name: 'Terraform'
 on:
   push:
     branches: [ "main" ]   # Sirf main pe push par plan chalega
-  pull_request:            # PR banate hi plan chalega
+           # PR banate hi plan chalega
 
 permissions:
   contents: read
@@ -78,7 +78,7 @@ jobs:
         run: terraform fmt -check
 
       - name: Terraform Plan
-        run: terraform plan -input=false -out=tfplan
+        run: terraform plan 
         # Out file save karke Apply job ko pass karenge
         # Agar chaho to artifact ke through upload bhi kar sakte ho
 
@@ -86,9 +86,9 @@ jobs:
     name: 'Terraform Apply'
     runs-on: self-hosted
     needs: terraform-plan
-    environment:
-      name: production
-      url: https://portal.azure.com   # Optional: Approval screen me link dikhane ke liye
+    # environment:
+    #   name: production
+    #   url: https://portal.azure.com   # Optional: Approval screen me link dikhane ke liye
 
     defaults:
       run:
