--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -55,7 +55,7 @@ permissions:
 jobs:
   terraform-plan:
     name: 'Terraform Plan'
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     environment: production
 
     defaults:
@@ -84,7 +84,7 @@ jobs:
 
   terraform-apply:
     name: 'Terraform Apply'
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     needs: terraform-plan
     # environment:
     #   name: production
