--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -46,8 +46,7 @@ name: 'Terraform'
 
 on:
   push:
-    branches: [ "main" ]   # Sirf main pe push par plan chalega
-           # PR banate hi plan chalega
+    branches: [ "main" ]
 
 permissions:
   contents: read
@@ -58,18 +57,20 @@ jobs:
     runs-on: ubuntu-latest
     environment: production
 
-    defaults:
-      run:
-        shell: bash
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
+
+      - name: Azure Login
+        uses: azure/login@v2
         with:
-          cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.SUBSCRIPTION_ID }}
+          client-secret: ${{ secrets.AZURE_CLIENT_SECRET }}
 
       - name: Terraform Init
         run: terraform init
@@ -78,34 +79,45 @@ jobs:
         run: terraform fmt -check
 
       - name: Terraform Plan
-        run: terraform plan 
-        # Out file save karke Apply job ko pass karenge
-        # Agar chaho to artifact ke through upload bhi kar sakte ho
+        run: terraform plan -out=tfplan
+
+      - name: Upload plan artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: tfplan
+          path: tfplan
 
   terraform-apply:
     name: 'Terraform Apply'
     runs-on: ubuntu-latest
     needs: terraform-plan
-    # environment:
-    #   name: production
-    #   url: https://portal.azure.com   # Optional: Approval screen me link dikhane ke liye
+    environment:
+      name: production   # 👈 enables approval if configured in GitHub UI
 
-    defaults:
-      run:
-        shell: powershell
-
-    # Ye ensure karega ki apply tabhi chale jab manually approved ho
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
+
+      - name: Azure Login
+        uses: azure/login@v2
         with:
-          cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          client-secret: ${{ secrets.AZURE_CLIENT_SECRET }}
 
       - name: Terraform Init
         run: terraform init
 
+      - name: Download plan artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: tfplan
+          path: .
+
       - name: Terraform Apply
         run: terraform apply -auto-approve tfplan
+
