--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -71,6 +71,7 @@ jobs:
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.SUBSCRIPTION_ID }}
           client-secret: ${{ secrets.AZURE_CLIENT_SECRET }}
+          auth-type: servicePrincipalSecret
 
       - name: Terraform Init
         run: terraform init
@@ -108,6 +109,7 @@ jobs:
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
           client-secret: ${{ secrets.AZURE_CLIENT_SECRET }}
+          auth-type: servicePrincipalSecret
 
       - name: Terraform Init
         run: terraform init
